--- a/styles/Step.module.css
+++ b/styles/Step.module.css
@@ -5,7 +5,7 @@
     height: 100px;
     margin: 10px;
     perspective: 1000px;
-    background-color: #736fe8;
+    background-color: #6fe88d;
     align-items: center;
     border-radius: 12px;
     padding: 15px;
